k3s-infra/treafik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-traefik
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "miniryzen"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-longhorn-frontend
#spec:
#  rules:
#  - host: 10.10.10.105
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: longhorn-frontend
#            port:
#              number: 80
#  ingressClassName: nginx
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-myserviceb
# spec:
#   rules:
#   - host: myserviceb.foo.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: myserviceb
#             port:
#               number: 80
#   ingressClassName: nginx
